--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <body>
       <div class = "box">
          <div class = "imgBx">
-            <img src="https://user-images.githubusercontent.com/61289486/82612498-da0e3880-9b77-11ea-81e5-c5bc2fde3807.JPG">
+            <img src="https://user-images.githubusercontent.com/61289486/82624618-e30f0200-9b97-11ea-83a1-95f55f4fa3cf.jpeg">
          </div>
          <div class="content">
             <h2>About Me</h2>
