--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <body>
       <div class = "box">
          <div class = "imgBx">
-            <img src="https://user-images.githubusercontent.com/61289486/82624618-e30f0200-9b97-11ea-83a1-95f55f4fa3cf.jpeg">
+            <img src="https://user-images.githubusercontent.com/61289486/82651291-cd69fe80-9bd0-11ea-9f45-fe617cad8c4b.jpg">
          </div>
          <div class="content">
             <h2>My Family</h2>
