--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <div class="content">
             <h2>My Family</h2>
             <p>   My family consists of my mom, dad, and brother. My mom is a housewife and she cooks and cleans for our family. Before she became a housewife, she was an 
-engineer. My dad is also an engineer, he specializes in electrical engineering. Engineers run in my family because my brother is currently in school to become an engineer. He is currently in his third year at UBC, majoring in computer engineering. He is currently on co-op at Intel Corporation and is also my mentor for my CLC project. 
+engineer. My dad is also an engineer, he specializes in electrical engineering. Engineers run in my family because my brother is currently in school to become an engineer. He is in his third year at UBC, majoring in computer engineering. He is also on co-op right now at Intel Corporation and is also my mentor for my CLC project. 
 My brother has always helped me whenever I was stuck with my academics and he is someone I look up to a lot despite our endless fights siblings always have.</p>
          </div>
       </div>
